# beef-system

./: .gitignore  CMakeLists.txt  CharacterEntity.h  ColliderComponent.h  Collision.h  Controller.h  EntityComponentSystem.h  Game.cpp  Game.h  HandleData.cpp  HandleData.h  ImportData.cpp  ImportData.h  Map.cpp  README.md  RotationComponent.h  SpriteComponent.h  TraitComponent.h  TransformComponent.h  main.cpp
Beef System/: Beef System.sln  Beef System.vcxproj  Beef System.vcxproj.filters  CMakeLists.txt  CharacterEntity.h  ColliderComponent.h  Collision.cpp  Components.h  Controller.h  EntityComponentSystem.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  KeyboardController.h  Map.cpp  Map.h  RotationComponent.h  SpriteComponent.h  TextureManager.cpp  TextureManager.h  TimerComponent.cpp  TimerComponent.h  TrafficLightEntity.cpp  TrafficLightEntity.h  TraitComponent.h  TransformComponent.h  Vector2D.cpp  Vector2D.h  main.cpp
Beef System/assets/traits/: traits.csv
assets/quirks/: quirks.csv
assets/stats/: stats.csv
assets/traits/: traits.csv
components/: Components.h  ControllerComponent.cpp  ControllerComponent.h  RotationComponent.h  TextBoxComponent.h  TraitComponent.h  TransformComponent.h
data/: HandleData.cpp  HandleData.h  Serializable.h
entities/: CharacterEntity.h  TrafficLightEntity.h
source/: Beef System.vcxproj  Beef System.vcxproj.filters  CMakeLists.txt  CharacterEntity.h  Components.h  EntityComponentSystem.h  Input.h  SpriteComponent.h  TimerComponent.h  TraitComponent.cpp  TraitComponent.h  Vector2D.h
